--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -196,8 +196,7 @@
     "CustomPlace": "请输入你要捐助的金额",
     "CurrencySymbol": "￥",
     "Thank": "感谢",
-    "ThankContent": "谢谢你朋友，你的好意我心领了，不必真的捐赠给我。",
-    "ThankContent2": "希望你每天能过得充实，并且记录下自己精彩的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
+    "ThankContent": "谢谢你朋友，你的好意我心领了，不必真的捐赠给我。\n希望你每天能过得充实，并且记录下自己的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
   },
   "FunctionalDescription": "功能说明",
   "ErrorHandle": {
