🐛 fix: fixed some bugs

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -136,7 +136,7 @@
     "ActiveDayCount": "Days",
     "Data": "Data",
     "Backups": "Backups",
-    "Import": "Import",
+    "Export": "Export",
     "Achievement": "Achievement",
     "Settings": "Setting",
     "Languages": "Language",
