--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -137,7 +137,7 @@
     "ActiveDayCount": "活跃天数",
     "Data": "数据",
     "Backups": "备份",
-    "Import": "导入",
+    "Export": "导出",
     "Achievement": "成就",
     "Settings": "设置",
     "Languages": "语言",
