🆕 feat: QuitApp Toast support I18n

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -340,5 +340,6 @@
     },
     "Rename": "Rename Location",
     "NoLocation": "No location"
-  }
+  },
+  "Press again to exit": "Press again to exit"
 }
