--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -324,7 +324,8 @@
     "ConfirmRestore": {
       "Title": "Confirm restore",
       "Content": "The database file will be overwritten. Do you want to continue?"
-    }
+    },
+    "No diary": "暂无日记"
   },
   "Location": {
     "Add": "Add Location",
