--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -128,9 +128,9 @@
     "OpenPrivacy": "Open privacy",
     "ClosePrivacy": "Close privacy"
   },
-  "AppName": "SwashbucklerDiary",
+  "AppName": "Swashbuckler Diary",
   "Mine": {
-    "MySpace": "My Space",
+    "MySpace": "My space",
     "Sign": "Hear the barking of dogs at the firewood gate, and return at night in the wind and snow",
     "DiaryCount": "Diaries",
     "WordCount": "Words",
