🆕 feat: add ThemeService and fixed some bugs

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -359,5 +359,10 @@
       "Title": "Confirm import",
       "Content": "Confirm importing these diaries？"
     }
+  },
+  "ThemeState": {
+    "System": "Follow system",
+    "Light": "Light",
+    "Dark": "Dark"
   }
 }
