--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -419,10 +419,12 @@
       "Title": "清空日志",
       "Content": "确定清空所有日志吗？"
     },
+    "Clear": "清空"
+  },
+  "Filter": {
     "Last month": "近一个月",
     "Last three months": "近三个月",
     "Last six months": "近六个月",
-    "Clear": "清空",
     "Filter": "筛选",
     "Start time": "起始时间",
     "End time": "终止时间"
