--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -13,6 +13,7 @@
     "Edit": "修改",
     "EditSuccess": "修改成功",
     "EditFail": "修改失败",
+    "Add": "添加",
     "AddSuccess": "添加成功",
     "AddFail": "添加失败",
     "Clear": "清除",
