💄 style: update a little styles

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -183,7 +183,7 @@
     "SourceCode": "View source code",
     "Agreement": "User agreement",
     "Privacy": "Privacy policy",
-    "UpdateRecords": "Update records",
+    "Check for updates": "Check for updates",
     "Evaluation": "Give a favorable comment",
     "Related": "Related open source project",
     "OpenAppStoreFail": "Failed to open the store",
