--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -184,7 +184,7 @@
     "SourceCode": "查看源码",
     "Agreement": "用户协议",
     "Privacy": "隐私政策",
-    "UpdateRecords": "更新记录",
+    "Check for updates": "检查更新",
     "Evaluation": "给个好评",
     "Related": "开源相关",
     "OpenAppStoreFail": "打开应用商店失败",
