♻️ refactor(History): remove directory

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -81,8 +81,7 @@
     "Placeholder": "Please enter keywords"
   },
   "History": {
-    "Calendar": "Calendar",
-    "Catalogue": "Catalogue"
+    "Calendar": "Calendar"
   },
   "Write": {
     "OpenTitle": "Open title",
