--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -82,8 +82,7 @@
     "Placeholder": "请输入关键词"
   },
   "History": {
-    "Calendar": "日历",
-    "Catalogue": "目录"
+    "Calendar": "日历"
   },
   "Write": {
     "OpenTitle": "打开标题",
