--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -132,7 +132,7 @@
   },
   "AppName": "Swashbuckler Diary",
   "Mine": {
-    "MySpace": "My space",
+    "Mine": "Mine",
     "Sign": "Hear the barking of dogs at the firewood gate, and return at night in the wind and snow",
     "DiaryCount": "Diaries",
     "WordCount": "Words",
