--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -132,7 +132,7 @@
   },
   "AppName": "侠客日记",
   "Mine": {
-    "MySpace": "我的空间",
+    "Mine": "我的",
     "Sign": "柴门闻犬吠，风雪夜归人",
     "DiaryCount": "日记数",
     "WordCount": "总字数",
